--- a/css/main.css
+++ b/css/main.css
@@ -8,10 +8,9 @@ nav img {
 
 /*selectores de etiquetas*/
 body {
+  font-size: 1.5em;
+  padding: 1em;
   background-image: url(../media/old_map/old_map/old_map.png); }
-  body h1 {
-    font-size: 1.5em;
-    padding: 1em; }
 
 input {
   background-color: #fbfbfb;
@@ -63,6 +62,19 @@ section li {
   list-style: none; }
   section li a {
     text-decoration: none; }
+
+header {
+  background: url(../media/fotoindex.PNG);
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 36vh; }
+  header h1 {
+    text-transform: uppercase;
+    color: black;
+    font-size: 60px; }
 
 /*selectores de clases*/
 .color {
@@ -158,6 +170,13 @@ section li {
   text-align: center;
   padding-top: 1em; }
 
+#cardproductos {
+  margin-top: 20px; }
+
+#textocardproductos {
+  text-align: center; }
+
+/* Responsive Design */
 footer {
   padding: 1em;
   text-align: center;
@@ -165,9 +184,3 @@ footer {
   footer img {
     align-items: center;
     padding-right: 1em; }
-
-header {
-  margin: auto;
-  margin: 2em;
-  padding: 1em;
-  position: center; }
