Mejoras en imagenes index

--- a/css/main.css
+++ b/css/main.css
@@ -58,19 +58,22 @@ p {
 div h3 {
   font-size: 1em; }
 
+div h5 {
+  font-size: 2em; }
+
 section li {
   list-style: none; }
   section li a {
     text-decoration: none; }
 
 header {
-  background: url(../media/fotoindex.PNG);
+  background: url(../media/collageprincipalindex.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 36vh; }
+  height: 40vh; }
   header h1 {
     text-transform: uppercase;
     color: black;
