--- a/css/main.css
+++ b/css/main.css
@@ -10,19 +10,18 @@ nav img {
 body {
   font-size: 1.5em;
   padding: 1em;
-  background-image: url(../media/old_map/old_map/old_map.png); }
-
-input {
-  background-color: #fbfbfb;
-  width: 408px;
-  height: 40px;
-  border-radius: 5px;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #ab4493;
-  margin-top: 10px;
-  padding-left: 10px;
-  margin-bottom: 20px; }
+  background-color: white; }
+  body input {
+    background-color: #fbfbfb;
+    width: 408px;
+    height: 40px;
+    border-radius: 5px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #ab4493;
+    margin-top: 10px;
+    padding-left: 10px;
+    margin-bottom: 20px; }
 
 textarea {
   background-color: #fbfbfb;
@@ -58,26 +57,10 @@ p {
 div h3 {
   font-size: 1em; }
 
-div h5 {
-  font-size: 2em; }
-
 section li {
   list-style: none; }
   section li a {
     text-decoration: none; }
-
-header {
-  background: url(../media/collageprincipalindex.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 40vh; }
-  header h1 {
-    text-transform: uppercase;
-    color: black;
-    font-size: 60px; }
 
 /*selectores de clases*/
 .color {
@@ -174,16 +157,29 @@ header {
   padding-top: 1em; }
 
 #cardproductos {
-  margin-top: 20px; }
+  margin-top: 20px;
+  background-color: black; }
 
 #textocardproductos {
-  text-align: center; }
+  display: flex;
+  text-align: center;
+  align-items: center;
+  color: white; }
 
-/* Responsive Design */
+#header {
+  padding-top: 1em; }
+
+#derechos {
+  padding-top: 1em; }
+
 footer {
   padding: 1em;
   text-align: center;
-  padding-top: 20px; }
+  padding-top: 20px;
+  background-color: black; }
   footer img {
+    width: 8%;
     align-items: center;
     padding-right: 1em; }
+  footer p {
+    color: white; }
