Cambios de color y fotos en todas las paginas

--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,12 @@ button p {
 span {
   color: #ab4493; }
 
+h1 {
+  font-size: 2em;
+  text-align: center;
+  font-style: italic;
+  padding-bottom: 1em; }
+
 h3 {
   font-size: 1em;
   padding-bottom: 1em;
@@ -171,6 +177,19 @@ section li {
 
 #derechos {
   padding-top: 1em; }
+
+#blog {
+  padding-bottom: 2em;
+  text-align: center; }
+
+#productos1 {
+  padding-bottom: 1em; }
+
+#productos2 {
+  padding-bottom: 2em; }
+
+#productos3 {
+  padding-bottom: 2em; }
 
 footer {
   padding: 1em;
