--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,8 @@ button p {
 span {
   color: #ab4493; }
 
-h1 {
+h1,
+h2 {
   font-size: 2em;
   text-align: center;
   font-style: italic;
@@ -72,9 +73,6 @@ section li {
 .color {
   color: white; }
 
-.color2 {
-  color: #ab4493; }
-
 .color3 {
   color: black; }
 
@@ -90,56 +88,9 @@ section li {
 .boton1:hover {
   background: radial-gradient(circle, #b5c1fd 0%, #f8b9c5 100%); }
 
-.contact_form {
-  width: 460px;
-  height: auto;
-  margin: 80px auto;
-  border-radius: 10px;
-  padding-top: 30px;
-  padding-bottom: 20px;
-  background-color: #fbfbfb;
-  padding-left: 30px; }
-
-.boton2 {
-  height: 45px;
-  padding-left: 5px;
-  padding-right: 5px;
-  margin-bottom: 20px;
-  margin-top: 10px;
-  text-transform: uppercase;
-  background-color: #ab4493;
-  border-color: #ab4493;
-  border-style: solid;
-  border-radius: 10px;
-  width: 420px;
-  cursor: pointer; }
-
 .aviso {
   font-size: 13px;
   color: #0e0e0e; }
-
-::-webkit-input-placeholder {
-  color: #a8a8a8; }
-
-::-webkit-textarea-placeholder {
-  color: #a8a8a8; }
-
-.formulario input:focus {
-  outline: 0;
-  border: 1px solid #97d848; }
-
-.formulario textarea:focus {
-  outline: 0;
-  border: 1px solid #97d848; }
-
-.bg-yellow {
-  background-color: #f7f7ce; }
-
-.bg-blue {
-  background-color: #f0f0f8; }
-
-.bg-green {
-  background-color: #ecf8ec; }
 
 .w-80 {
   width: 80%; }
@@ -157,23 +108,32 @@ section li {
   z-index: 20;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
 
+.header {
+  padding-top: 1em; }
+
+.formulario {
+  padding-bottom: 2em; }
+
+.nosotros {
+  padding-bottom: 3em; }
+
 /*selectores de id*/
 #error404 {
   text-align: center;
-  padding-top: 1em; }
+  padding-top: 1em;
+  background-color: black; }
+
+#error404textos {
+  color: white;
+  padding: 1em; }
 
 #cardproductos {
   margin-top: 20px;
   background-color: black; }
 
 #textocardproductos {
-  display: flex;
-  text-align: center;
-  align-items: center;
-  color: white; }
-
-#header {
-  padding-top: 1em; }
+  color: white;
+  text-align: center; }
 
 #derechos {
   padding-top: 1em; }
