--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -47,7 +47,8 @@
      color: #ab4493;
  }
  
- h1 {
+ h1,
+ h2 {
      font-size: $fontSizeTitles;
      text-align: center;
      font-style: italic;
@@ -84,10 +85,6 @@
      color: white;
  }
  
- .color2 {
-     color: #ab4493;
- }
- 
  .color3 {
      color: black;
  }
@@ -106,65 +103,9 @@
      background: radial-gradient(circle, rgb(181, 193, 253) 0%, rgb(248, 185, 197) 100%);
  }
  
- .contact_form {
-     width: 460px;
-     height: auto;
-     margin: 80px auto;
-     border-radius: 10px;
-     padding-top: 30px;
-     padding-bottom: 20px;
-     background-color: #fbfbfb;
-     padding-left: 30px;
- }
- 
- .boton2 {
-     height: 45px;
-     padding-left: 5px;
-     padding-right: 5px;
-     margin-bottom: 20px;
-     margin-top: 10px;
-     text-transform: uppercase;
-     background-color: #ab4493;
-     border-color: #ab4493;
-     border-style: solid;
-     border-radius: 10px;
-     width: 420px;
-     cursor: pointer;
- }
- 
  .aviso {
      font-size: 13px;
      color: #0e0e0e;
- }
- 
- ::-webkit-input-placeholder {
-     color: #a8a8a8;
- }
- 
- ::-webkit-textarea-placeholder {
-     color: #a8a8a8;
- }
- 
- .formulario input:focus {
-     outline: 0;
-     border: 1px solid #97d848;
- }
- 
- .formulario textarea:focus {
-     outline: 0;
-     border: 1px solid #97d848;
- }
- 
- .bg-yellow {
-     background-color: rgb(247, 247, 206);
- }
- 
- .bg-blue {
-     background-color: rgb(240, 240, 248);
- }
- 
- .bg-green {
-     background-color: rgb(236, 248, 236);
  }
  
  .w-80 {
@@ -186,11 +127,29 @@
      z-index: 20;
      text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
  }
+ 
+ .header {
+     padding-top: 1em;
+ }
+ 
+ .formulario {
+     padding-bottom: 2em;
+ }
+ 
+ .nosotros {
+     padding-bottom: 3em;
+ }
  /*selectores de id*/
  
  #error404 {
      text-align: center;
      padding-top: 1em;
+     background-color: black;
+ }
+ 
+ #error404textos {
+     color: white;
+     padding: 1em;
  }
  
  #cardproductos {
@@ -199,14 +158,8 @@
  }
  
  #textocardproductos {
-     display: flex;
-     text-align: center;
-     align-items: center;
      color: white;
- }
- 
- #header {
-     padding-top: 1em;
+     text-align: center;
  }
  
  #derechos {
