--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,7 +1,10 @@
 footer {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 2%;
+    padding-top: 2%;
     padding: $p;
     text-align: center;
-    padding-top: 20px;
     background-color: black;
     img {
         width: 8%;
