--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -119,6 +119,10 @@
  .margin {
      margin: 2em;
  }
+ 
+ .footer__link--icono {
+     text-align: center;
+ }
  /*selectores de id*/
  
  #error404 {
