--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,17 +1,8 @@
 footer {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 2%;
-    padding-top: 2%;
-    padding: $p;
-    text-align: center;
     background-color: black;
-    img {
-        width: 8%;
-        align-items: center;
-        padding-right: $p;
-    }
     p {
         color: white;
+        text-align: center;
+        font-size: $fontSizeMain;
     }
 }
