--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -2,8 +2,8 @@
  
  body {
      font-size: $fontSizeTitles2;
-     padding: 1em;
-     background-color: white;
+     padding: $p;
+     background-color: $color-principal;
      input {
          background-color: #fbfbfb;
          width: 408px;
@@ -33,12 +33,6 @@
  label {
      display: block;
      float: center;
- }
- 
- button {
-     p {
-         color: #fff;
-     }
  }
  
  h1,
@@ -75,19 +69,6 @@
  }
  /*selectores de clases*/
  
- .color {
-     color: white;
- }
- 
- .color3 {
-     color: black;
- }
- 
- .aviso {
-     font-size: 13px;
-     color: #0e0e0e;
- }
- 
  .w-80 {
      width: $w-80;
  }
@@ -100,7 +81,7 @@
      transform: scale(1.1, 1.2);
  }
  
- .header {
+ .header__imagen--padding {
      padding-top: 1em;
  }
  
@@ -108,16 +89,12 @@
      padding-bottom: 2em;
  }
  
- .nosotros {
+ .pagina__nosotros {
      padding-bottom: 3em;
  }
  
- .comentarios {
-     color: rgb(18, 18, 221);
- }
- 
  .margin {
-     margin: 2em;
+     margin: $m;
  }
  
  .footer__link--icono {
@@ -125,45 +102,46 @@
  }
  /*selectores de id*/
  
- #error404 {
+ #pagina__error404 {
      text-align: center;
-     padding-top: 1em;
-     background-color: black;
+     background-color: $bg-black;
+     padding: $p2;
  }
  
- #error404textos {
-     color: white;
-     padding: 1em;
+ #pagina__error404--textos {
+     color: $color-principal;
+     padding: 0.5em;
  }
  
- #cardproductos {
+ #pagina__error404--imagen {
+     width: 30%;
+     padding: $p2;
+ }
+ 
+ #card__productos--estilo {
      margin-top: 20px;
-     background-color: black;
+     background-color: $bg-black;
  }
  
- #textocardproductos {
-     color: white;
+ #card__productos--texto {
+     color: $color-principal;
      text-align: center;
      margin: 3em;
  }
  
- #derechos {
-     padding-top: 1em;
- }
- 
- #blog {
+ #pagina__blog {
      padding-bottom: 2em;
      text-align: center;
  }
  
- #productos1 {
+ #card__productos1--padding {
      padding-bottom: 1em;
  }
  
- #productos2 {
+ #card__productos2--padding {
      padding-bottom: 2em;
  }
  
- #productos3 {
+ #card__productos3--padding {
      padding-bottom: 2em;
  }
