--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -4,10 +4,8 @@
     padding: 0;
 }
 
-$bg-oldmap: url(../media/old_map/old_map/old_map.png);
-$bg-pink: rgb(250, 241, 243);
-$color: black;
-$colorp: grey;
+$bg-black:black;
+$color-principal:white;
 $w-25:25%;
 $w-50:50%;
 $w-80:80%;
@@ -19,3 +17,5 @@ $d-block:block;
 $py-1:1em 0;
 $px-1:0 1em;
 $p:1em;
+$p2:2em;
+$m:1em;
